<resources>
    <string name="app_name">RESTaurant</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="start_time">Startzeit</string>
    <string name="end_time">Endzeit</string>
    <string name="required_seats">Anzahl benötigter Sitze</string>
    <string name="seat_at_window">Fensterplatz</string>
    <string name="reserve">Reservieren</string>
    <string name="select_date">Datum wählen</string>
    <string name="choose_time">Uhrzeit wählen</string>
</resources>
